[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/materials/node_unselected.tres" type="Material" id=1]
[ext_resource path="res://assets/scenes/fea/scripts/fea_node.gd" type="Script" id=2]

[sub_resource type="SphereMesh" id=1]

[sub_resource type="BoxShape" id=2]

[node name="FeaNode" type="Spatial"]
transform = Transform( 0.075, 0, 0, 0, 0.075, 0, 0, 0, 0.075, 0, 0, 0 )
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )

[node name="PickableArea" type="Area" parent="."]
collision_mask = 0
__meta__ = {
"_editor_description_": "Large collidor on Layer01 for Pickable selections."
}

[node name="CollisionShape" type="CollisionShape" parent="PickableArea"]
shape = SubResource( 2 )

[node name="WindowableArea" type="Area" parent="."]
input_ray_pickable = false
collision_layer = 2
collision_mask = 0
__meta__ = {
"_editor_description_": "Small collider on Layer02 for Windowing selections."
}

[node name="CollisionShape" type="CollisionShape" parent="WindowableArea"]
shape = SubResource( 2 )
[connection signal="mouse_entered" from="PickableArea" to="." method="_on_moused_over"]
[connection signal="mouse_exited" from="PickableArea" to="." method="_on_moused_out"]
